# Quiet

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  res.qrc
res/: app.rc  res.qrc
src/: main.cpp  main.js
src/frontend/: index.html  styles.css
